bugs/client/common/view/global.css
.g-hidden {
    display: none !important
}

.g-not-visible {
    visibility: hidden;
}

.g-table {
    border-collapse: collapse;
    border-spacing: 0px;
    border: solid 1px;
    table-layout: fixed;
    width: 100%;
    background-color: var(--table-bg-color);
}

.g-table thead td {
    text-transform: capitalize;
    text-align: center;
}

.g-table td {
    border: solid 1px;
    overflow: auto;
    padding: var(--margin-small);
}

.g-error-container {
    color: var(--err-color);
    min-height: 20px;
    font-weight: var(--font-weight);
    font-size: var(--font-size);
    padding: 1px;
}

.g-error-container--tall {
    min-height: 40px;
}

.g-button {
    border-radius: 3px;
    background-color: var(--btn-bg-color);
    font-weight: var(--font-weight);
    font-size: var(--font-size);
    padding: 3px;
    min-height: var(--control-height);
    text-transform: capitalize;
    border: solid 1px gray;
    transition: background-color 0.2s ease, box-shadow 0.2s ease;
}

.g-button--main {
    font-weight: var(--font-weight-strong);
    font-size: var(--font-size-large);
}

.g-button-svg {
    border-radius: 3px;
    background-color: var(--btn-bg-color);
    padding: 0;
    width: var(--control-height);
    height: var(--control-height);
    padding: 4px;
    display: flex;
    align-items: center;
    border: solid 1px gray;
    transition: background-color 0.2s ease, box-shadow 0.2s ease;
}

.g-button-svg--small {
    width: var(--control-height-small);
    height: var(--control-height-small);
    padding: 1px;
}

.g-button-svg--tiny {
    width: var(--control-height-tiny);
    height: var(--control-height-tiny);
    padding: 0;
}

.g-button-svg svg {
    width: 100%;
    height: 100%;
}

.g-button:hover,
.g-button-svg:hover {
  background-color: var(--btn-bg-hover);
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
}

.g-button:active,
.g-button-svg:active {
  background-color: var(--btn-bg-active);
  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
}

.g-input {
    padding: 3px;
    height: var(--control-height);
    font-weight: var(--font-weight);
    font-size: var(--font-size);
}

.g-select {
    height: var(--control-height);
    font-weight: var(--font-weight);
    font-size: var(--font-size);
}

input:focus-visible,
select:focus-visible,
button:focus-visible {
    outline: none;
    border-color: var(--contrasting-color-hard);
    box-shadow: 0 0 0 1px var(--contrasting-color-hard);
}

input, select, button {
    color: var(--font-color);
}
input:disabled,
select:disabled,
button:disabled {
    color: var(--font-color-disabled);
    opacity: 0.6;
}

/* hack for ios safari */
@supports (background: -webkit-named-image(i)) {
    .g-select {
        -webkit-appearance: none;
        appearance: none;
        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2210%22%20height%3D%227%22%20viewBox%3D%220%200%2010%207%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20d%3D%22M0%200l5%207%205-7z%22%20fill%3D%22%23333%22/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-position: right 5px center;
        background-size: 15px 7px;
        padding: 3px;
        padding-right: 32px;
    }
}

